crates/resources/tests/snapshots/artifact_install__artifact_installer_unpacks_single_root_archive_and_updates_current_pointer.snap
---
source: crates/resources/tests/artifact_install.rs
expression: "install_summary(&install, tempdir.path())?"
---
(
    "resources/redis/7.2/releases/7.2.5-pv1",
    "resources/redis/7.2/current",
    "releases/7.2.5-pv1",
)
